# uas_rekayasa_fitur

./: blibli_scrapping.ipynb  blibli_sentimentanalysis.ipynb  main.py  pyproject.toml
dataset/: kamus_alay.xlsx  slangs.csv
