[project]
name = "uas-rekayasa-fitur"
version = "0.1.0"
description = "uas rekfit"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "emoji>=2.14.1",
    "google-play-scraper>=1.2.7",
    "jupyter>=1.1.1",
    "nltk>=3.9.1",
    "notebook>=7.4.4",
    "pandas>=2.3.1",
    "pygments>=2.19.2",
    "sastrawi>=1.0.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "swifter>=1.4.0",
    "tqdm>=4.67.1",
    "wordcloud>=1.9.4",
]
